# QT_ImageViewer

./: .gitignore  CMakeLists.txt  Dockerfile  Qt_ImageView.pro  Qt_ImageView.pro.user.b61bcba  README.md  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myqlabel.cpp  myqlabel.h  qroiView.cpp  qroiView.h  viewport.cpp  viewport.h  zoomDialog.cpp  zoomDialog.h
